style.css
@import url('https://fonts.googleapis.com/css?family=Roboto');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Roboto', sans-serif;
    color: #fff;
    /* box-sizing: border-box; */
    /* display: block; */
}

.main-toggle-button {
    display: block;
    width: 100px;
    height: 32px;
    margin: none;
    padding: none;
    border-radius: 8px;
    background-color: rgba(39,39,39);
    color: #fff;
    border: none;
    font-family: 'Roboto', sans-serif;
    font-weight: bold;
}

.summariser-extension {
    width: 200%;
    height: 800px;
    position: absolute;
    display: none;
    background-color: rgba(27, 27, 35);
    border-radius: 5px;
    border: 4px solid rgba(47, 47, 57);
    display: flex;
    align-items: flex-end;
    justify-content: center;
    padding: 5px;
    flex-direction: column;
    z-index: 10000000;
    top: 24px;
    border-radius: 10px;
}

body {
  width: 100%;
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  background-color: #111;
}

.info-div-container {
  width: 100%;
  height: 80%;
  background-color: transparent;
}

.input-form-container {
  width: 100%;
  height: 20%;
  background-color: transparent;
}

.info-div {
  width: 100%;
  height: 100%;
  background-color: #444654;
  border-top-right-radius: 6px;
  border-top-left-radius: 6px;
  overflow-y: scroll;
}

.input-form {
  width: 100%;
  height: 100%;
  /* background-color: #272831; */
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom-right-radius: 6px;
  border-bottom-left-radius: 6px;
  position: relative;
  padding-inline: 20px;
  background-color: transparent;
  background-image: linear-gradient(0deg,rgba(53,55,64,0),#272831 58.85%);
}

.textarea-container {
  position: relative; /* needed for absolutely positioned textarea */
  background-color: #46485a;
  margin: 0;
  width: 100%;
  border-radius: 5px;
}

.textarea-container textarea {
  display: block;
  width: 100%;
  box-sizing: border-box;
  resize: none;
  padding-block: 16px;
  padding-left: 16px;
  font-size: 16px;
  line-height: 1.5;
  outline: none;
  border: none;
  background-color: transparent;
  color: #fff;
  max-height: 200px;
  letter-spacing: 1px;
}

.enter-button{
  height: 30px;
  width: 30px;
  border: none;
  cursor: pointer;
  background-color: transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 5px;
  overflow: hidden;
  position: absolute;
  right: 10px;
  bottom: 20px;
}

.enter-button:hover {
  background-color: #111;
}

.enter-button:hover {
  background-color: #222;
}

.enter-button > svg {
  scale: 1.5;
  background-color: transparent;
}

.loading-dots {
  height: 100%;
  width: 100%;
  text-justify: center;
}

.assistant-message {
  width: 100%;
  min-height: 50px;
  background-color: #272831;
  display: flex;
  padding: 20px;
  font-size: 16px;
}

.user-message {
  width: 100%;
  min-height: 50px;
  background-color: #444654;
  display: flex;
  padding: 20px;
  font-size: 16px;
  letter-spacing: 1px;
}

.assistant-icon {
  width: 30px;
  height: 30px;
  scale: 0.8;
  display: flex;
  justify-content: top;
  align-items: center;
}

.assistant-icon > svg {
  fill: rgba(2, 195, 154);
}

.user-icon {
  width: 30px;
  height: 30px;
  scale: 2;
  display: flex;
  justify-content: top;
  align-items: center;
  border-radius: 10px;
  padding: 5px;
}

.question {
  width: 95%;
  font-size: 16px;
  white-space: normal;
  padding-left: 20px;
  letter-spacing: 0.5px;
  line-height: 28px;
  font-weight: 400;
  color: #fff;
}

.assistant-message > *:nth-child(1) {
  align-items: center;
  justify-content: center;
}

.user-message > *:nth-child(1) {
  align-items: center;
  justify-content: center;
}

.block-text{
  width: 100%;
  margin-block: 20px;
  margin-inline: none;
}

.block-text-first {
  width: 100%;
  margin-block: 0px 0px 20px;
  margin-inline: none;
}

.list-element {
  width: 100%;
  padding-left: 20px;
}

.list-element::before {
  content: "•"; /* Add a bullet point */
  color: #fff; /* Change the color of the bullet point */
  margin-left: -20px; /* Use a negative margin to overlap the padding */
  margin-right: 10px;
}

.list {
  padding-left: 16px;
  width: 100%;
}

.code-top {
  background-color: #343541;
  width: 100%;
  height: 48px;
  margin: 0;
  padding: 8px;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  display: flex;
  align-items: center;
  justify-content: right;
}

.copy-button {
  width: 140px;
  height: 100%;
  background-color: transparent;
  border: none;
  cursor: pointer;
  font-size: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: row;
}

code {
  background-color: #000;
  width: 100%;
  margin: 0;
  padding: 20px;
  border-bottom-left-radius: 10px;
  border-bottom-right-radius: 10px;
  tab-size: 10;
  display: flex;
  white-space: pre-wrap;
  text-shadow: none;
  flex-direction: column;
}

.clipboard-svg {
  margin-right: 6px;
  width: 22px;
  height: 100%;
}

.tick-svg {
  margin-right: 6px;
  width: 22px;
  height: 100%;
}

.copy-button > h4 {
  font-size: 16px;
  width: 50%;
}

.copy-button > svg {
  margin-right: 6px;
  width: 22px;
  height: 100%;
}

